# odoo-mailer

./: Cargo.toml  README.md
src/: args.rs  config.rs  errors.rs  main.rs  utils.rs
src/cmd/: aliases.rs  daemon.rs  lmtp.rs  mod.rs  pipe.rs  transport.rs  webhook.rs
