[package]
name = "odoo-mailer"
version = "0.8.3"
authors = ["Éric BURGHARD <eric.burghard@solarsis.ao>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
ureq = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tiny_http = "0.6"
bufstream = "0.1"